--- a/Rhea/Info.plist
+++ b/Rhea/Info.plist
@@ -32,5 +32,14 @@
 	<string>NSApplication</string>
 	<key>LSUIElement</key>
 	<true/>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>rhea-dropbox-auth</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
