--- a/Rhea/Info.plist
+++ b/Rhea/Info.plist
@@ -38,6 +38,7 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>rhea-dropbox-auth</string>
+				<string>rhea-bitly-auth</string>
 			</array>
 		</dict>
 	</array>
