--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "Vendor/SAMKeychain"]
 	path = Vendor/SAMKeychain
 	url = https://github.com/timonus/samkeychain
+[submodule "Vendor/TJURLShortener"]
+	path = Vendor/TJURLShortener
+	url = git@github.com:timonus/TJURLShortener.git
+[submodule "Vendor/Brotli"]
+	path = Vendor/Brotli
+	url = git@github.com:timonus/Brotli.git
